--- a/chapter_6.qmd
+++ b/chapter_6.qmd
@@ -8,7 +8,7 @@ This week was about classification, which basically is turning raw satellite ima
 
 An example is the use of Landsat data to map urban growth. Taking the case of Iskandar, Malaysia (Figure 1), Landsat imagery was classified to show land cover types—like urban built-up areas, vegetation, and waterbodies (Yasin et al., 2022).
 
-![Fig 1. Landsat classified data on Iskandar Malaysia region](week_7/Iskandar_Malaysia_region.png)
+![Fig 1. Landsat classified data on Iskandar Malaysia region (Yasin et al., 2022)](week_7/Iskandar_Malaysia_region.png)
 
 Classification can be practically useful in monitoring city growth of time to uncover trends and use it for future planning.
 
@@ -29,7 +29,7 @@ But both can suffer from overfitting—where the model works too well on the tra
 
 SVM is a supervised machine learning model that finds the best boundary (called a hyperplane) between two classes—like urban and vegetation (see Figure 3). It’s great for high-dimensional data like hyperspectral imagery. It uses kernel functions (like RBF or polynomial) and parameters like C and gamma to tune the model (Mountrakis et al., 2011).
 
-![Fig 3. SVM Hyperplane boundary](week_7/SVM.png)
+![Fig 3. SVM Hyperplane boundary (Mountrakis et al., 2011)](week_7/SVM.png)
 
 SVMs perform well with small datasets and generalize better than decision trees and neural networks, though they’re slower with big data—where Random Forest or deep learning might be more practical.
 
@@ -41,13 +41,13 @@ Support Vector Machines (SVM) have been widely applied in classification tasks. 
 
 The first study, by Zylshal et al. (2016), focused on identifying urban green spaces in Jakarta using high-resolution Pleiades-1A imagery. The classification process involved defining land cover classes—vegetation, non-vegetation, and water—followed by training the SVM model with a small dataset. Since SVM is a binary classifier, a “one-against-one” strategy was used to classify each pair of land cover types. Although the study did not state the exact input features, the data processing flowchart (figure 4) shows NDVI, NDWI and MSAVI used likely as input features, given their relevance in vegetation analysis.
 
-![Fig 4. Data processing flowchart](week_7/data_flowchart.png)
+![Fig 4. Data processing flowchart (Zylshal et al., 2016)](week_7/data_flowchart.png)
 
 Instead of classifying individual pixels, the study used multiresolution segmentation to group pixels into meaningful objects before applying classification. The output was further refined using expert rules and validated through an accuracy assessment, achieving 86% accuracy. This study effectively demonstrated the integration of SVM with Object-Based Image Analysis (OBIA) for high-resolution classification.
 
 The second study, by Karimi et al. (2019), applied SVM to predict urban expansion in Guilford County, North Carolina, using data from the National Land Cover Database (USGS) and other supporting datasets. Unlike the first study’s spatial classification, this focused on temporal prediction, modeling the transition from “unbuilt” to “built” land as shown in figure 5.
 
-![Fig 5. Binary classification of simulated LULC map in 2016](week_7/Binary_classification_of_simulated_LULC_map_in_2016.jpg)
+![Fig 5. Binary classification of simulated LULC map in 2016 (Karimi et al., 2019)](week_7/Binary_classification_of_simulated_LULC_map_in_2016.jpg)
 
 To improve results, the model was tuned through kernel selection and parameter optimization. Because urban growth datasets are often imbalanced, with more unbuilt than built land, the study used strategic sampling to reduce bias. It achieved 78% accuracy, slightly lower than the first study, likely due to the larger dataset and the complexity of time-based prediction. SVM proved valuable in handling both continuous and categorical variables, making it well-suited for modeling urban growth trends.
 
@@ -68,3 +68,7 @@ What I found interesting is that both studies relied on SVM as a binary classifi
 SVM works well with limited, high-quality data, but in broader applications like national urban expansion studies, it might struggle with processing speed and generalization. A key takeaway is that SVM could be enhanced by hybrid approaches, for instance, integrating it with Random Forest, neural networks, or rule-based methods for better scalability.
 
 Overall, this week showed me that classification is not just a technical process—it’s about tailoring tools to fit data types, goals, and scale, and SVM is just one part of a growing toolbox in urban remote sensing.
+
+## References
+
+Karimi, F., Sultana, S., Shirzadi Babakan, A., Suthaharan, S., 2019. An enhanced support vector machine model for urban expansion prediction. Comput. Environ. Urban Syst. 75, 61–75. https://doi.org/10.1016/j.compenvurbsys.2019.01.001 Mountrakis, G., Im, J., Ogole, C., 2011. Support vector machines in remote sensing: A review. ISPRS J. Photogramm. Remote Sens. 66, 247–259. https://doi.org/10.1016/j.isprsjprs.2010.11.001 Shahtahmassebi, A., Li, C., Yifan, F., Wu, Y., Lin, Y., Gan, M., Wang, K., Malik, A., Blackburn, A., 2020. Remote sensing of urban green spaces: A review. Urban For. Urban Green. 57, 126946. https://doi.org/10.1016/j.ufug.2020.126946 Yasin, M.Y., Abdullah, J., Noor, Norzailawati Mohd, Yusoff, M.M., Noor, Nisfariza Mohd, 2022. Landsat observation of urban growth and land use change using NDVI and NDBI analysis. IOP Conf. Ser. Earth Environ. Sci. 1067, 012037. https://doi.org/10.1088/1755-1315/1067/1/012037 Yu, W., Liu, T., Valdez, R., Gwinn, M., Khoury, M.J., 2010. Application of support vector machine modeling for prediction of common diseases: the case of diabetes and pre-diabetes. BMC Med. Inform. Decis. Mak. 10, 16. https://doi.org/10.1186/1472-6947-10-16 Zylshal, Sulma, S., Yulianto, F., Nugroho, J.T., Sofan, P., 2016a. A support vector machine object based image analysis approach on urban green space extraction using
