--- a/chapter_7.qmd
+++ b/chapter_7.qmd
@@ -8,7 +8,7 @@ This week built on last week's classification session, but took a different turn
 
 The key focus for me was sub-pixel classification—a method that tries to identify multiple land cover types within a single pixel. This is really helpful when working with coarse resolution imagery where, for example, a 30m pixel might contain buildings, roads, and trees. Traditional classification would assign it one label, but sub-pixel methods estimate the proportions of each type instead.
 
-![Fig. 1 A zoomed-in pixel showing buildings, vegetation, and roads](week_8/zoomed_in_pixel.png)
+![Fig. 1 A zoomed-in pixel showing buildings, vegetation, and roads (MacLachlan et al., 2017)](week_8/zoomed_in_pixel.png)
 
 Sub-pixel analysis is especially useful in urban fringe areas, where land cover is complex and mixed. But it also raises new challenges around validation and reliability. That leads us into the importance of accuracy assessment.
 
@@ -16,13 +16,13 @@ Sub-pixel analysis is especially useful in urban fringe areas, where land cover 
 
 In remote sensing, three key metrics help evaluate performance:
 
-Producer Accuracy – How well the model captures a class based on reference data ![](week_8/Picture8.png)
+Producer Accuracy – How well the model captures a class based on reference data ![](week_8/Picture8.png){width="30" height="11"}
 
-User Accuracy – How likely the modelled class is correct when visited on the ground![](week_8/Picture9.png)
+User Accuracy – How likely the modelled class is correct when visited on the ground![](week_8/Picture9.png){width="30" height="12"}
 
-Overall Accuracy – The total correct classifications across all classes ![](week_8/Picture10.png)
+Overall Accuracy – The total correct classifications across all classes ![](week_8/Picture10.png){width="30" height="12"}
 
-![Fig. 2 Confusion matrix from Dynamic World](week_8/Picture6.png)
+![Fig. 2 Confusion matrix from Dynamic World (Brown et al., 2022)](week_8/Picture6.png)
 
 Looking at Dynamic World, for instance, the model achieved 94% recall for water; meaning it detected most water pixels—but only 87% user accuracy; meaning some areas it labelled as water were not actually water on the ground. Averaging across all classes, the overall accuracy came to around 72%, which reflects the trade-off between global coverage and accuracy.
 
@@ -34,7 +34,7 @@ For this week, I focus what methods they use for their sub pixel classification 
 
 The first study is by Suresh & Jain (2018) explored subpixel classification on a small urban scale using high resolution QuickBird imagery (0.6m). They adopted two main methods, colorimetry and chromaticity diagrams.They used colorimetry, specifically the CIE-XYZ colour space, to model how colours within a pixel mix, estimating the proportions of different land cover types. Then, comparing chromatic distances between neighbouring pixels, they broke down mixed pixels more accurately. They validated their method using a Fuzzy Error Matrix, which showed better results than standard soft classifiers. This is shown the table below.
 
-![Table. 1 Accuracy outputs comparing authors proposed and conventional approach](week_8/Picture11.png)
+![Table. 1 Accuracy outputs comparing authors proposed and conventional approach (Suresh and Jain, 2018)](week_8/Picture11.png)
 
 Insights
 
@@ -50,4 +50,8 @@ This week, I chose a paper that introduced a method we hadn’t covered in class
 
 ## Reference
 
-Suresh, M., & Jain, K. (2018). Subpixel level mapping of remotely sensed image using colorimetry. The Egyptian Journal of Remote Sensing and Space Sciences, 21(1), 65–72. https://doi.org/10.1016/j.ejrs.2017.02.004
+Brown, C.F., Brumby, S.P., Guzder-Williams, B., Birch, T., Hyde, S.B., Mazzariello, J., Czerwinski, W., Pasquarella, V.J., Haertel, R., Ilyushchenko, S., Schwehr, K., Weisse, M., Stolle, F., Hanson, C., Guinan, O., Moore, R., Tait, A.M., 2022. Dynamic World, Near real-time global 10 m land use land cover mapping. Sci. Data 9, 251. https://doi.org/10.1038/s41597-022-01307-4
+
+MacLachlan, A., Roberts, G., Biggs, E., Boruff, B., 2017. Subpixel land-cover classification for improved urban area estimates using Landsat. Int. J. Remote Sens. 38, 5763–5792. https://doi.org/10.1080/01431161.2017.1346403
+
+Suresh, M., Jain, K., 2018. Subpixel level mapping of remotely sensed image using colorimetry. Egypt. J. Remote Sens. Space Sci. 21, 65–72. https://doi.org/10.1016/j.ejrs.2017.02.004
