--- a/chapter_5.qmd
+++ b/chapter_5.qmd
@@ -4,26 +4,54 @@ title: "Google Earth Engine"
 
 ## Summary
 
-This week was all about Google Earth Engine (GEE). It’s a powerful cloud-based platform that lets you analyse satellite data without downloading huge files. Instead of running things on your laptop, GEE does the heavy lifting for you online. We looked at how it makes working with remote sensing data easier, faster, and more accessible — especially for global-scale work.
+This week was all about Google Earth Engine (GEE). It’s a powerful cloud-based platform that lets you analyse satellite data without downloading huge files. Instead of running things on your laptop, GEE does the heavy lifting for you online. We looked at how it makes working with remote sensing data easier, faster, and more accessible — especially for global-scale work. The video below gives an overview of Google Earth Engine (GEE).
 
-What really stood out for me was the shift from traditional desktop processing to cloud-based analysis. Before, you'd have to download loads of satellite data, clean it up, and then run it on your own machine — which takes forever and kills your laptop. But with GEE, the data’s already online, and the processing happens in the cloud. This means it runs faster and doesn’t depend on your computer’s power. I think this is a big deal, especially for people in places like Ghana where access to powerful machines can be limited. GEE basically opens the door for more people to do meaningful analysis, even on large datasets, without needing fancy tech setups. That feels like a huge game changer.
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gKGOeTFHnKY?autoplay=1&amp;mute=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+
+</iframe>
+
+Source: [Google Earth Engine](https://www.youtube.com/watch?v=gKGOeTFHnKY)
+
+What really stood out for me was the shift from traditional desktop processing to cloud-based analysis. Instead of downloading loads of satellite data, cleaning it up, and then processing it on your machine, which takes forever and kills your laptop slowly, it is now done online. With GEE providing already cleaned and pre-processed data online, and with the capability to further process it to the project. This means it runs faster and doesn’t depend on your computer’s power. I think this is a big deal, especially for people in places like Ghana where cost of powerful machines can be high. GEE basically allow complex processing at faster speeds and larger volumes, inrespective of on an individual's laptop.
+
+
 
 ## Application
+For this week's application, I wanted to see how GEE is used in real-world studies.
+I will look a study that used it for GEE for classification analysis.
 
-To understand how GEE works in practice, I looked at two studies that used it for land cover classification and change detection — both with practical use in urban planning and sustainability.
+The first study is by Lodato et al (2023) who focused on the analyses of the spatiotemporal urban expansion of the Rome coastline. They used Landsat multispectral imagery from 1985 to 2020 from GEE which was used to quantified urban expansion by classification. 
 
-The first paper by Kamal et al. (2019) focused on monitoring land cover change in Dhaka, Bangladesh, from 1990 to 2017. They used Landsat imagery and ran a Random Forest classification through GEE. Everything from data access to processing was done in the cloud. That meant no downloading, no storage stress — just quick, consistent analysis over nearly three decades. Their output showed a massive shift from agricultural and forest areas to urban land. It was a good example of how GEE can scale analysis across time without complex infrastructure.
+GEE was used for cloud masking, creating median image composites, calculating NDVI and SwiRed indices, and implementing the Random Forest (RF) algorithm for classification. The general workflow is shown in figure 1.
 
-The second study by Jin et al. (2019) took things a step further. They built a 30-meter global land cover map using over 1 million Landsat images — all processed within GEE. They used supervised classification and trained their model using samples collected from multiple sources. What stood out was how GEE let them handle such a large dataset with relative ease. The platform allowed for global-scale mapping, which would’ve been nearly impossible using local machines.
+![Fig.1 Analysis workflow (Lodato et al., 2023)](week_6/Picture1.png)
 
-Both studies showed how GEE makes remote sensing more accessible, especially for researchers and policymakers in the Global South. It reduces technical barriers and speeds up workflows without sacrificing accuracy. I can definitely see how this could be used for urban planning in Ghana — tracking informal settlements, land-use conflicts, or even flood zones over time.
+The outcomes highlighted a significant increase in "Urban" and "Woodland" areas and quantified landscape transformations As shown in figure 2.
+
+![Fig.2 Analysis workflow (Lodato et al., 2023)](week_6/Picture2.png)
+
+This study was carried out the analysis on GEE. This shows, GEE can process large volumes of data. However, the study also carried out the accuracy assessment on GEE. Considering how GEE does not give the user explict details on how it carries it's anaylsis, a safe guard would be to carry out the accuracy assessment on another platform to ensure the results are reliable.
+
+
+
+
 
 ## Reflection
 
-Honestly, I really like the idea behind Google Earth Engine. It removes a lot of the barriers that come with remote sensing — like needing a high-spec laptop or dealing with slow downloads. Everything’s just there and ready to use. I can definitely see how this could be super useful in Ghana, especially for government agencies or local researchers who may not have access to powerful machines but still want to monitor things like illegal mining, urban sprawl, or deforestation.
+Just like the first week, I decided to make this week's more about GEE as a product and  its applications by looking at a relevant study.
 
-What surprised me was how quick the results came through. With just a bit of JavaScript, you can visualise changes over time or run NDVI analysis in seconds. I’m still getting used to the coding part, but it feels way more approachable than I expected.
+I like the idea behind Google Earth Engine. It removes a lot of  the barriers that come with remote sensing — like needing a good laptop or complicated codes for analysis. Everything’s just there and ready to use. 
 
-One thing I’m still wondering about, though, is what happens when internet access isn’t stable. Like, would this be fully reliable in rural areas where connections drop often? And also, what’s the long-term sustainability of using a free cloud service run by a private company? Those are things I’d want to look into more.
+Also, the way GEE simplifies code into easy functions and produces quick visuals makes me think it could even be used to teach remote sensing at the primary school level in Ghana. A lot of subjects aren't taught in detail at that level because they're seen as too complex, even though their real-world applications are discussed. So having a platform like GEE, where you can analyse and visualise data from one place with minimal technical effort, feels like a real game changer.
 
-But overall, this week made me feel like big, global-scale analysis is no longer just for people with big funding or expensive hardware. That’s a win.
+One thing I’m still curious about is what happens when internet access isn’t stable. Would GEE still be reliable in rural areas where the connection drops often? Also, since it’s a free platform run by a private company, what’s the long-term sustainability? These are definitely questions worth thinking about.
+
+Overall, even though I think GEE is great for detailed analysis, I would personally prefer running some things locally, especially for sensitive or resource-heavy tasks.
+
+
+## References
+
+
+Lodato, F., Colonna, N., Pennazza, G., Praticò, S., Santonico, M., Vollero, L., Pollino, M., 2023. Analysis of the Spatiotemporal Urban Expansion of the Rome Coastline through GEE and RF Algorithm, Using Landsat Imagery. ISPRS Int. J. Geo-Inf. 12, 141. https://doi.org/10.3390/ijgi12040141
+
+
