--- a/intro.qmd
+++ b/intro.qmd
@@ -1,4 +1,4 @@
-## Preface {.unnumbered}
+## Preface 
 
 This is a diary showing my progress, understanding, and interests in remote sensing. My background in civil engineering, green/sustainable development (as an EDGE expert), and sound engineering might influence how I reflect on the content and what stands out to me.
 
