--- a/summary.qmd
+++ b/summary.qmd
@@ -1,7 +1,3 @@
 # Summary
 
-In summary, this book has no content whatsoever.
-
-```{r}
-1 + 1
-```
+The learning diary, has improved my sense in what remote sensing is and can be used for. This is from understanding satellite types and sensors (Week 1–2), reflectance corrections (Week 3), illegal mining detection (Week 4), Google Earth Engine (Week 6), classification techniques (Weeks 7–8), and SAR applications (Week 9). Each topic showed how spatial data can support and inform decisions and policy. Together, these highlight remote sensing’s power in tackling global and local challenges.
